platform-services/feature-flags/tests/snapshots/integration__resolve__cnf-and-or-match.snap
---
source: tests/integration.rs
expression: snapshot
---
value: true
variant: "on"
reason: TargetingMatch
