platform-services/feature-flags/tests/snapshots/integration__resolve__disabled.snap
---
source: tests/integration.rs
expression: snapshot
---
value: false
variant: "off"
reason: Disabled
