platform-services/feature-flags/tests/snapshots/integration__resolve__flag-not-found.snap
---
source: tests/integration.rs
expression: snapshot
---
value: false
variant: ""
reason: Error
error_code: FLAG_NOT_FOUND
error_message: "flag `missing-flag` not found"
