platform-services/feature-flags/tests/snapshots/integration__resolve__object-default.snap
---
source: tests/integration.rs
expression: snapshot
---
value:
  burst: 10
  requests_per_minute: 60
variant: standard
reason: Default
