platform-services/feature-flags/tests/snapshots/integration__resolve__prerequisite-met.snap
---
source: tests/integration.rs
expression: snapshot
---
value: modern
variant: modern
reason: TargetingMatch
