platform-services/feature-flags/tests/snapshots/integration__resolve__prerequisite-unmet.snap
---
source: tests/integration.rs
expression: snapshot
---
value: classic
variant: classic
reason: Default
