platform-services/feature-flags/tests/snapshots/integration__resolve__type-mismatch.snap
---
source: tests/integration.rs
expression: snapshot
---
value: ""
variant: ""
reason: Error
error_code: TYPE_MISMATCH
error_message: flag is not of type string
